# eloimx

./: CMakeLists.txt  README.md
develop_record/: preparation.md
include/eloimx/: eloimx.h
include/eloimx/bsdfs/: dielectric.h  diffuse.h
include/eloimx/core/: constants.h  frame.h  math.h  platform.h  point.h  ray.h  spectrum.h  util.h  vector.h  warp.h
include/eloimx/integrators/: path.h
include/eloimx/render/: bsdf.h  common.h  emitter.h  film.h  integrator.h  intersection.h  perspective.h  renderjob.h  sampler.h  scene.h  sensor.h  shape.h
lib/: fmt.lib  fmtd.lib
src/: CMakeLists.txt  demoJob.cpp  main.cpp
src/bsdfs/: dielectric.cpp  diffuse.cpp
src/integrators/: path.cpp
src/libcore/: frame.cpp  math.cpp  ray.cpp  spectrum.cpp  util.cpp  warp.cpp
src/librender/: common.cpp  emitter.cpp  integrator.cpp  intersection.cpp  perspective.cpp  renderjob.cpp  sampler.cpp  scene.cpp  shape.cpp
src/testdemo/: demo1.cpp  demo2.cpp  demo3.cpp  demo4.cpp  demo5.cpp  demo_camera.cpp  demo_core.cpp  demo_embree.cpp  demo_matrix.cpp
